Fix scrolling on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,6 @@
 html,
 body {
   max-width: 100vw;
-  height: 100svh;
-  overflow: hidden;
 }
 
 body {
