--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   height: 100svh;
   width: 100vw;
+  overflow: hidden;
 }
 
 /* Desktop: side-by-side */
